[gd_scene load_steps=41 format=3 uid="uid://ducjkbwamyfvy"]

[ext_resource type="Script" uid="uid://br38ml3ecelmv" path="res://Scripts/Objects/Actors/NPCs/Enemies/EnemyObjectScript.gd" id="1_girmq"]
[ext_resource type="Texture2D" uid="uid://vw0b7yt3p6yd" path="res://Sprites/Objects/Enemies_A.png" id="2_mgslv"]
[ext_resource type="Script" uid="uid://h8p15lq68mfe" path="res://Scripts/Objects/Actors/NPCs/Enemies/States/chase_player.gd" id="6_bok5x"]
[ext_resource type="AudioStream" uid="uid://cfkopi3m54im" path="res://Sfxs/MaliciousProjectile.ogg" id="6_imr2c"]
[ext_resource type="Script" uid="uid://nh07dwv1adjx" path="res://Scripts/Objects/Actors/NPCs/Enemies/Enemy_MachineStateApplyer.gd" id="8_1d24w"]
[ext_resource type="Script" uid="uid://cgmlhwxal64ru" path="res://Scripts/Objects/Actors/NPCs/Enemies/States/CannonerIdle.gd" id="10_ujwfk"]
[ext_resource type="Script" uid="uid://true50xrhc5i" path="res://Scripts/Objects/Actors/NPCs/Enemies/States/shoot_player.gd" id="11_57fmy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34s1f"]
size = Vector2(32, 40)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_aksof"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("6_imr2c")

[sub_resource type="Animation" id="Animation_0ktr7"]
length = 0.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(1707, 0, 109, 58), Rect2(1816, 0, 110, 58)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-8.5, -1), Vector2(-9, -1)]
}

[sub_resource type="Animation" id="Animation_uwgls"]
length = 0.16
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(1270, 0, 109, 69), Rect2(1379, 0, 110, 68), Rect2(1489, 0, 108, 66), Rect2(1597, 0, 110, 58)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6.5, -6.5), Vector2(-8, -6), Vector2(-7, -5), Vector2(-9, -1)]
}

[sub_resource type="Animation" id="Animation_0gv8j"]
length = 0.24
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Rect2(618, 0, 103, 66), Rect2(721, 0, 110, 67), Rect2(831, 0, 110, 69), Rect2(941, 0, 110, 68)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-4.5, -5), Vector2(-8, -5.5), Vector2(-8, -6.5), Vector2(-7, -6)]
}

[sub_resource type="Animation" id="Animation_tiyle"]
length = 0.08
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(1051, 0, 109, 69), Rect2(1160, 0, 110, 68)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-5.5, -6.5), Vector2(-6, -6)]
}

[sub_resource type="Animation" id="Animation_mlntv"]
length = 0.28
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Rect2(1926, 0, 128, 64), Rect2(2054, 0, 114, 65)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4, -4), Vector2(-11, -4.5)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Sprite/../EnemyMachine_State/ShootPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shot"
}]
}

[sub_resource type="Animation" id="Animation_5ucud"]
length = 0.24
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Rect2(0, 0, 103, 66), Rect2(103, 0, 103, 66), Rect2(206, 0, 103, 66), Rect2(309, 0, 103, 66), Rect2(412, 0, 103, 66), Rect2(515, 0, 103, 66)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-4.5, -5), Vector2(-4.5, -5), Vector2(-4.5, -5), Vector2(-4.5, -5), Vector2(-4.5, -5), Vector2(-4.5, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mqk6n"]
_data = {
&"Cannoner_AimLock": SubResource("Animation_0ktr7"),
&"Cannoner_Aiming": SubResource("Animation_uwgls"),
&"Cannoner_Alert": SubResource("Animation_0gv8j"),
&"Cannoner_AlertLoop": SubResource("Animation_tiyle"),
&"Cannoner_Fire": SubResource("Animation_mlntv"),
&"Cannoner_Idle": SubResource("Animation_5ucud")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j8y26"]
animation = &"Cannoner_AimLock"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bg5mp"]
animation = &"Cannoner_Aiming"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yebyu"]
animation = &"Cannoner_Alert"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xxj8r"]
animation = &"Cannoner_AlertLoop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2n4ci"]
animation = &"Cannoner_Fire"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6pvkf"]
animation = &"Cannoner_Idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qmnoo"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f4mjn"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_m1bjw"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_berpy"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bk0q2"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e0mv2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lkce4"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cj64x"]
states/Cannoner_AimLock/node = SubResource("AnimationNodeAnimation_j8y26")
states/Cannoner_AimLock/position = Vector2(930, 315.5)
states/Cannoner_Aiming/node = SubResource("AnimationNodeAnimation_bg5mp")
states/Cannoner_Aiming/position = Vector2(750, 245.5)
states/Cannoner_Alert/node = SubResource("AnimationNodeAnimation_yebyu")
states/Cannoner_Alert/position = Vector2(564, 85.5)
states/Cannoner_AlertLoop/node = SubResource("AnimationNodeAnimation_xxj8r")
states/Cannoner_AlertLoop/position = Vector2(743, 148.5)
states/Cannoner_Fire/node = SubResource("AnimationNodeAnimation_2n4ci")
states/Cannoner_Fire/position = Vector2(1136, 315.5)
states/Cannoner_Idle/node = SubResource("AnimationNodeAnimation_6pvkf")
states/Cannoner_Idle/position = Vector2(388, 85.5)
states/End/position = Vector2(1130, 245.5)
transitions = ["Start", "Cannoner_Idle", SubResource("AnimationNodeStateMachineTransition_qmnoo"), "Cannoner_Idle", "Cannoner_Alert", SubResource("AnimationNodeStateMachineTransition_f4mjn"), "Cannoner_Alert", "Cannoner_AlertLoop", SubResource("AnimationNodeStateMachineTransition_m1bjw"), "Cannoner_AlertLoop", "Cannoner_Aiming", SubResource("AnimationNodeStateMachineTransition_berpy"), "Cannoner_Aiming", "Cannoner_AimLock", SubResource("AnimationNodeStateMachineTransition_bk0q2"), "Cannoner_AimLock", "Cannoner_Fire", SubResource("AnimationNodeStateMachineTransition_e0mv2"), "Cannoner_Fire", "Cannoner_AimLock", SubResource("AnimationNodeStateMachineTransition_lkce4")]
graph_offset = Vector2(491, 111)

[sub_resource type="Animation" id="4"]
resource_name = "aRESET"
length = 0.001
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="2"]
resource_name = "Flash"
length = 0.16
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(18.892157, 18.892157, 18.892157, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1pjnc"]
_data = {
&"ARESET": SubResource("4"),
&"Flash": SubResource("2")
}

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(76, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owkfx"]
size = Vector2(353, 1728)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rwvss"]
size = Vector2(352, 1728)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3ym8"]
size = Vector2(512, 256)

[sub_resource type="Animation" id="Animation_y6meh"]
resource_name = "Pulse"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(0.5, 0.5, 0),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 2), Vector2(1.5, 1.5)]
}

[sub_resource type="Animation" id="Animation_43s5p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gqbud"]
_data = {
&"Pulse": SubResource("Animation_y6meh"),
&"RESET": SubResource("Animation_43s5p")
}

[node name="Cannoner" type="CharacterBody2D" node_paths=PackedStringArray("Animation_Tree", "EnemyArea2DBody", "EnemieCenterPath", "EnemieVisibilityMask") groups=["Enemies", "Hurters"]]
light_mask = 257
z_index = 10
collision_layer = 48
collision_mask = 9222
velocity = Vector2(0, 194.297)
floor_stop_on_slope = false
floor_max_angle = 1.13446
floor_snap_length = 16.0
script = ExtResource("1_girmq")
Animation_Tree = NodePath("Sprite/AnimationPlayer/AnimationTree")
EnemyArea2DBody = NodePath("Area2Ds/Enemy_HitBox")
EnemieCenterPath = NodePath(".")
EnemieVisibilityMask = NodePath("VisibleOnScreenEnabler2D")
hp = 8.0
score_reward = 5

[node name="Mask" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_34s1f")
debug_color = Color(0, 0.323451, 0.7, 0.42)

[node name="LabelPos" type="Marker2D" parent="."]
position = Vector2(0, -61)

[node name="AreaSFX_MaliciousProjectile" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -28)
stream = SubResource("AudioStreamRandomizer_aksof")

[node name="VisibleOnScreenEnabler2D2" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, -32)
scale = Vector2(6, 6)
rect = Rect2(-12, -12, 24, 24)
enable_node_path = NodePath("../VisibleOnScreenEnabler2D")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-3.8147e-06, -32)
scale = Vector2(6, 6)
rect = Rect2(-11.999999, -12, 24, 24)

[node name="Invencibility_Time" type="Timer" parent="."]
wait_time = 0.001

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(18.892157, 18.892157, 18.892157, 1)
texture_filter = 1
position = Vector2(0, -28)
texture = ExtResource("2_mgslv")
offset = Vector2(-4.5, -5)
region_enabled = true
region_rect = Rect2(309, 0, 103, 66)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_mqk6n")
}
autoplay = "Cannoner_Idle"

[node name="AnimationTree" type="AnimationTree" parent="Sprite/AnimationPlayer"]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/../..")
tree_root = SubResource("AnimationNodeStateMachine_cj64x")
anim_player = NodePath("..")

[node name="FirePos" type="Marker2D" parent="Sprite"]
unique_name_in_owner = true
position = Vector2(44, -13)

[node name="StatePlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_1pjnc")
}
autoplay = "ARESET"

[node name="Area2Ds" type="Node2D" parent="."]
position = Vector2(0, -28)

[node name="Enemy_HitBox" type="Area2D" parent="Area2Ds"]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 256

[node name="Mask" type="CollisionShape2D" parent="Area2Ds/Enemy_HitBox"]
editor_description = "To detect meele attacks to brake"
position = Vector2(12, 2)
shape = SubResource("1")
debug_color = Color(0.753443, 0.427194, 0, 0.42)

[node name="Enemy_TargetDetectorLeft" type="Area2D" parent="Area2Ds"]
unique_name_in_owner = true
visible = false
collision_layer = 0

[node name="Mask" type="CollisionShape2D" parent="Area2Ds/Enemy_TargetDetectorLeft"]
position = Vector2(-208.5, -644)
shape = SubResource("RectangleShape2D_owkfx")

[node name="Enemy_TargetDetectorRight" type="Area2D" parent="Area2Ds"]
unique_name_in_owner = true
visible = false
collision_layer = 0

[node name="Mask" type="CollisionShape2D" parent="Area2Ds/Enemy_TargetDetectorRight"]
position = Vector2(208, -644)
shape = SubResource("RectangleShape2D_rwvss")

[node name="Enemy_Range_Attack" type="Area2D" parent="Area2Ds"]
collision_layer = 0

[node name="Mask" type="CollisionShape2D" parent="Area2Ds/Enemy_Range_Attack"]
position = Vector2(0, -100)
shape = SubResource("RectangleShape2D_v3ym8")

[node name="EnemyMachine_State" type="Node" parent="." node_paths=PackedStringArray("Start_State")]
script = ExtResource("8_1d24w")
Start_State = NodePath("Idle")

[node name="Idle" type="Node" parent="EnemyMachine_State" node_paths=PackedStringArray("ChasePlayer", "ShootPlayer")]
script = ExtResource("10_ujwfk")
ChasePlayer = NodePath("../ChasePlayer")
ShootPlayer = NodePath("../ShootPlayer")

[node name="ChasePlayer" type="Node" parent="EnemyMachine_State" node_paths=PackedStringArray("ShootPlayer")]
script = ExtResource("6_bok5x")
ShootPlayer = NodePath("../ShootPlayer")
Time_ToGo_ShootPlayer = 2.0
velocity_speed = 800.0
acceleration = 10.0
KnockBack_Hit = 200.0

[node name="ShootPlayer" type="Node" parent="EnemyMachine_State" node_paths=PackedStringArray("ChasePlayer")]
script = ExtResource("11_57fmy")
ChasePlayer = NodePath("../ChasePlayer")
Time_ToGo_ChasePlayer = 1.2
friction = 160.0

[node name="HealthLabel" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
z_index = 20
offset_left = -19.0
offset_top = -79.0
offset_right = 25.0
offset_bottom = -54.0
pivot_offset = Vector2(22, 12)
text = "1000"

[node name="LabelAP" type="AnimationPlayer" parent="HealthLabel"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_gqbud")
}
autoplay = "RESET"

[connection signal="body_entered" from="Area2Ds/Enemy_TargetDetectorLeft" to="EnemyMachine_State/ChasePlayer" method="Left_Target_Entered"]
[connection signal="body_entered" from="Area2Ds/Enemy_TargetDetectorLeft" to="EnemyMachine_State/ShootPlayer" method="Left_Target_Entered"]
[connection signal="body_entered" from="Area2Ds/Enemy_TargetDetectorRight" to="EnemyMachine_State/ChasePlayer" method="Right_Target_Entered"]
[connection signal="body_entered" from="Area2Ds/Enemy_TargetDetectorRight" to="EnemyMachine_State/ShootPlayer" method="Right_Target_Entered"]
